fixing FB link and trying to fix mobile horizontal scrolling

--- a/assets/scss/mpowheard.scss
+++ b/assets/scss/mpowheard.scss
@@ -521,6 +521,11 @@ body {
 #why, #connect {
 	overflow-x: hidden !important;
 	max-width:100vw;
+	div.container {
+		@media screen and (max-width:35.9375rem) {
+			overflow-x:hidden;
+		}
+	}
 	div.section-content {
 	 	max-width:71.25rem;
 	 	margin:auto;
